--- a/code-snippets/slider-multi-handles/noui-custom-connects.html
+++ b/code-snippets/slider-multi-handles/noui-custom-connects.html
@@ -21,6 +21,10 @@
       <button class="recreate">Recreate</button>
     </div>
 
+    <div>
+      <button class="init">Get init status</button>
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
     <script src="./nouislider.min.js"></script>
     <script src="./slider.js"></script>
