update recreate different numbers of handles

--- a/code-snippets/slider-multi-handles/noui-custom-connects.html
+++ b/code-snippets/slider-multi-handles/noui-custom-connects.html
@@ -18,7 +18,9 @@
 
     <div>
       <button class="destroy">Destroy</button>
-      <button class="recreate">Recreate</button>
+      <button class="recreate1">Recreate (1 handle)</button>
+      <button class="recreate2">Recreate (2 handles)</button>
+      <button class="recreate3">Recreate (3 handles)</button>
     </div>
 
     <div>
